--- a/src/Css/Inventario.css
+++ b/src/Css/Inventario.css
@@ -145,7 +145,7 @@
 }
 
 /* Título */
-.modal-content h2 {
+.modal-content1 h2 {
     font-size: 24px;
     color: #4CAF50;
     margin-bottom: 20px;
@@ -169,6 +169,37 @@
     border: none;
     outline: none;
 }
+
+/* Ocultar el input de archivos */
+.file-input-hidden {
+    display: none;
+}
+
+/* Botón personalizado */
+.custom-file-label {
+    display: inline-block;
+    background-color: #2b8a3e; /* Color verde */
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-file-label:hover {
+    background-color: #239634; /* Color verde más oscuro */
+}
+
+.custom-file-label:active {
+    background-color: #1e7c2c; /* Color más oscuro para el clic */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
 
 /* Botones de acciones */
 .modal-actions {
@@ -330,4 +361,86 @@
     100% {
         transform: scale(1);
     }
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.pagination button {
+    background-color: #f0f0f0; /* Light gray background */
+    color: #333; /* Dark text */
+    border: 1px solid #ddd; /* Light border */
+    border-radius: 5px; /* Rounded corners */
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.pagination button:hover {
+    background-color: #377e3a; /* Blue on hover */
+    color: #fff; /* White text on hover */
+    border-color: #377e3a;
+}
+
+.pagination button.active {
+    background-color: #4CAF50; /* Active button color */
+    color: #fff; /* White text */
+    border-color: #4CAF50;
+    font-weight: bold;
+    transform: scale(1.1); /* Slightly larger */
+}
+
+.delete-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.delete-modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 400px;
+    width: 90%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.delete-modal-actions button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.confirm-btn {
+    background-color: #d9534f;
+    color: white;
+}
+
+.confirm-btn:hover {
+    background-color: #c9302c;
+}
+
+.cancel-btn {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.cancel-btn:hover {
+    background-color: #45a049;
 }
